# AI_RESEARCH_AGENT

./: .env.example  .gitignore  Dockerfile  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt  research_agent.py  vercel.json
static/css/: output.css
templates/: index.html
