[project]
name = "ai-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "fpdf2>=2.8.7",
    "groq>=0.37.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.2",
    "markdown2>=2.5.5",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "tavily-python>=0.7.25",
    "uvicorn>=0.48.0",
    "weasyprint>=68.1",
]
